Disable line wrapping in the textarea to avoid confusion

--- a/chrome/popup/styles.css
+++ b/chrome/popup/styles.css
@@ -135,6 +135,7 @@ textarea {
   border: solid 1px #ccc;
   width: 140px;
   height: 142px;
+  white-space: nowrap;
   outline: none;
   background: #f8f8f8;
   color: #555;
